# portfolio-pos-system-

./: .env.example  .git-workflow-version  .gitignore  .mcp.json  CLAUDE.md  README.md  secrets.yaml  setup-ssh-windows.ps1  version.json
.eas/workflows/: mobile-development.yml  mobile-preview.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ux_feedback.yml
.github/workflows/: build-desktop.yml  cd.yml  sync-to-portfolio.yml  tests.yml
admin-portal/: .npmrc  package-lock.json  package.json  pnpm-lock.yaml
admin-portal/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
admin-portal/components/: AuthGuard.tsx  DraftsBar.tsx  (+7 more)
backend/: .coveragerc  .env.example  create_public_viewer.py  requirements.txt  seed_caracas.py  seed_data.py
docker/: docker-compose.dev.yml
docs/: DEPLOYMENT_ARCHITECTURE.md  SCHOOL_UUID_REFERENCE.md
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: http_client.rs  main.rs  printer.rs
mobile/: .npmrc  app.json  eas.json  package.json  pnpm-lock.yaml  tailwind.config.js
scripts/: build-release.sh  dev.sh  sanitize-for-portfolio.sh  setup-feedback-repo.sh  sync-version.js
shared/: design-tokens.ts
web-portal/: .npmrc  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
(+1322 files in other folders)
