[package]
name = "uniformes-system"
version = "2.9.0"
description = "Sistema de Gestión de Uniformes"
authors = ["Angel Samuel Suesca Rios"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-http = "=2.2.0"
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-shell = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.6"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
